# frenchplotlib

./: .gitignore  README.md  makefile  pyproject.toml  setup.py  test.py
example/: custom.py  errorbar.py  errorbar_couleurs.py  markers.py  pretentieux.py  style_simple.py  styles_demo.py
frenchplotlib/: __init__.py  baguetteplot.py  converter.py  custom_marker.py  dorures.py  styles.py
test/: couleurs.py  heatmap_tricolore.py  markers.py  multi_markers.py
