[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frenchplotlib"
version = "0.5.0"
description = "French-themed matplotlib markers and colormaps"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.6"
dependencies = [
    "matplotlib",
    "numpy",
]
